
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int tmp ;
struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;


 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int memcpy (char*,char*,int) ;
 scalar_t__ realloc (char*,int) ;
 int recv (int,char*,int,int ) ;
 int select (int,int *,int *,int *,struct timeval*) ;

char *socket_receive(int sock, int tout) {

 int ret,
     byte,
     oldpkglen = 0,
     pkglen = 0;
 char *buffer = ((void*)0),
      tmp[128];
 struct timeval timeout;
 fd_set input;

 if(sock < 0) return ((void*)0);

 while (1) {

  FD_ZERO(&input);
  FD_SET(sock, &input);

  if(tout > 0) {
   timeout.tv_sec = tout;
   timeout.tv_usec = 0;
   ret = select(sock + 1, &input, ((void*)0), ((void*)0), &timeout);
  }
  else
   ret = select(sock + 1, &input, ((void*)0), ((void*)0), ((void*)0));

  if (!ret) break;
  if (ret < 0) return ((void*)0);

  byte = recv(sock, tmp, sizeof(tmp), 0);

  if(byte < 0) return ((void*)0);

  if(!byte) break;

  oldpkglen = pkglen;
  pkglen += byte;

  buffer = (char *) realloc(buffer, pkglen+1);

  if(!buffer) return ((void*)0);

  memcpy(buffer+oldpkglen, tmp, byte);

 }

 if(buffer) buffer[pkglen] = 0;

 return buffer;

}
