; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_14193.c_socket_receive.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_14193.c_socket_receive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @socket_receive(i32 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca [128 x i8], align 16
  %12 = alloca %struct.timeval, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i8* null, i8** %10, align 8
  %14 = load i32, i32* %4, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %85

17:                                               ; preds = %2
  br label %18

18:                                               ; preds = %17, %67
  %19 = call i32 @FD_ZERO(i32* %13)
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @FD_SET(i32 %20, i32* %13)
  %22 = load i32, i32* %5, align 4
  %23 = icmp sgt i32 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %18
  %25 = load i32, i32* %5, align 4
  %26 = getelementptr inbounds %struct.timeval, %struct.timeval* %12, i32 0, i32 0
  store i32 %25, i32* %26, align 8
  %27 = getelementptr inbounds %struct.timeval, %struct.timeval* %12, i32 0, i32 1
  store i64 0, i64* %27, align 8
  %28 = load i32, i32* %4, align 4
  %29 = add nsw i32 %28, 1
  %30 = call i32 @select(i32 %29, i32* %13, i32* null, i32* null, %struct.timeval* %12)
  store i32 %30, i32* %6, align 4
  br label %35

31:                                               ; preds = %18
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 1
  %34 = call i32 @select(i32 %33, i32* %13, i32* null, i32* null, %struct.timeval* null)
  store i32 %34, i32* %6, align 4
  br label %35

35:                                               ; preds = %31, %24
  %36 = load i32, i32* %6, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %39, label %38

38:                                               ; preds = %35
  br label %75

39:                                               ; preds = %35
  %40 = load i32, i32* %6, align 4
  %41 = icmp slt i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %39
  store i8* null, i8** %3, align 8
  br label %85

43:                                               ; preds = %39
  %44 = load i32, i32* %4, align 4
  %45 = getelementptr inbounds [128 x i8], [128 x i8]* %11, i64 0, i64 0
  %46 = call i32 @recv(i32 %44, i8* %45, i32 128, i32 0)
  store i32 %46, i32* %7, align 4
  %47 = load i32, i32* %7, align 4
  %48 = icmp slt i32 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %43
  store i8* null, i8** %3, align 8
  br label %85

50:                                               ; preds = %43
  %51 = load i32, i32* %7, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %54, label %53

53:                                               ; preds = %50
  br label %75

54:                                               ; preds = %50
  %55 = load i32, i32* %9, align 4
  store i32 %55, i32* %8, align 4
  %56 = load i32, i32* %7, align 4
  %57 = load i32, i32* %9, align 4
  %58 = add nsw i32 %57, %56
  store i32 %58, i32* %9, align 4
  %59 = load i8*, i8** %10, align 8
  %60 = load i32, i32* %9, align 4
  %61 = add nsw i32 %60, 1
  %62 = call i64 @realloc(i8* %59, i32 %61)
  %63 = inttoptr i64 %62 to i8*
  store i8* %63, i8** %10, align 8
  %64 = load i8*, i8** %10, align 8
  %65 = icmp ne i8* %64, null
  br i1 %65, label %67, label %66

66:                                               ; preds = %54
  store i8* null, i8** %3, align 8
  br label %85

67:                                               ; preds = %54
  %68 = load i8*, i8** %10, align 8
  %69 = load i32, i32* %8, align 4
  %70 = sext i32 %69 to i64
  %71 = getelementptr inbounds i8, i8* %68, i64 %70
  %72 = getelementptr inbounds [128 x i8], [128 x i8]* %11, i64 0, i64 0
  %73 = load i32, i32* %7, align 4
  %74 = call i32 @memcpy(i8* %71, i8* %72, i32 %73)
  br label %18

75:                                               ; preds = %53, %38
  %76 = load i8*, i8** %10, align 8
  %77 = icmp ne i8* %76, null
  br i1 %77, label %78, label %83

78:                                               ; preds = %75
  %79 = load i8*, i8** %10, align 8
  %80 = load i32, i32* %9, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i8, i8* %79, i64 %81
  store i8 0, i8* %82, align 1
  br label %83

83:                                               ; preds = %78, %75
  %84 = load i8*, i8** %10, align 8
  store i8* %84, i8** %3, align 8
  br label %85

85:                                               ; preds = %83, %66, %49, %42, %16
  %86 = load i8*, i8** %3, align 8
  ret i8* %86
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i64 @realloc(i8*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
